fix: move banner text higher for visibility

--- a/src/tenants/concentrix/Home/sections/Banner/Banner.module.scss
+++ b/src/tenants/concentrix/Home/sections/Banner/Banner.module.scss
@@ -2,7 +2,7 @@
 
 .banner {
   height: 100vh;
-  padding-top: 30vh; // Consistent padding for all screen sizes
+  padding-top: 25vh; // Consistent padding for all screen sizes
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
